force-app/main/default/objects/Krow__Task_Time__c/Krow__Task_Time__c.object-meta.xml
<CustomObject>
    <label>Klient Task Time</label>
    <nameField>
        <displayFormat>TT-{0}</displayFormat>
        <label>Task Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klient Task Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>