force-app/main/default/objects/Krow__Task_Time__c/fields/Krow__Bill_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bill_Rate_Amount__c</fullName>
    <formula>IF(Krow__Bill_Rate__c = null,0, 
Krow__Bill_Rate__c * ( Krow__Hours__c + Krow__Minutes__c/60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>