force-app/main/default/objects/Krow__Task_Time__c/fields/Krow__Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task__c</fullName>
    <label>Klient Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Klient Task Times</relationshipLabel>
    <relationshipName>Task_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>