force-app/main/default/objects/Krow__Task_Time__c/fields/Krow__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>Krow__Timesheet__c</referenceTo>
    <relationshipLabel>Klient Task Times</relationshipLabel>
    <relationshipName>Task_Times</relationshipName>
    <type>Lookup</type>
</CustomField>