force-app/main/default/objects/Krow__Task_Time__c/fields/Krow__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours__c</fullName>
    <formula>(IF(ISBLANK(Krow__Hours__c), 0.0, Krow__Hours__c) + IF(ISBLANK(Krow__Minutes__c), 0.0, (((100.0/60.0) * Krow__Minutes__c)/100.0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>