force-app/main/default/objects/Krow__Task_Time__c/validationRules/Krow__Timesheet_master_must_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Timesheet_master_must_be_filled</fullName>
    <active>true</active>
    <description>This is to validate that timesheet field must always be filled</description>
    <errorConditionFormula>ISBLANK(Krow__Timesheet__c)</errorConditionFormula>
    <errorMessage>Timesheet field can&apos;t be empty</errorMessage>
</ValidationRule>